--- a/index.html
+++ b/index.html
@@ -2,323 +2,193 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>FreeFlow — zamów głosem</title>
-  <meta name="theme-color" content="#0b0f12" />
+  <meta name="color-scheme" content="dark light" />
   <style>
     :root{
-      --glass-bg: rgba(15,18,22,.55);
-      --glass-bd: rgba(255,255,255,.08);
-      --text: #eef2f5;
-      --muted: #b9c2cc;
-      --accent: #00d3ff;
-      --ok: #2ee6a6;
-      --shadow: 0 20px 40px rgba(0,0,0,.45);
-      --radius: 20px;
+      --glass-bg: rgba(20,20,22,.55);
+      --glass-brd: rgba(255,255,255,.12);
+      --glass-blur: 18px;
+      --text: #f6f7fb;
+      --muted: #c7c9d1;
+      --brand: #ff8a30;
+      --focus: #21d4fd;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;
       color:var(--text);
-      font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
-      background:#0b0f12 url("assets/Background.png") center/cover fixed no-repeat;
-      -webkit-tap-highlight-color: transparent; /* NO blue flash on tap */
-      overflow-x:hidden;
+      font: 500 16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Color Emoji", "Apple Color Emoji";
+      background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
+    .page{
+      min-height:100dvh;
+      display:flex;
+      flex-direction:column;
+      gap:16px;
+      padding: clamp(12px, 2.2vw, 24px);
+      padding-bottom: calc(24px + env(safe-area-inset-bottom));
+      background: radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
+      backdrop-filter: blur(.5px);
     }
 
-    /* backdrop blur containers */
-    .glass{
-      backdrop-filter: blur(18px) saturate(110%);
-      -webkit-backdrop-filter: blur(18px) saturate(110%);
-      background: var(--glass-bg);
-      border: 1px solid var(--glass-bd);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
+    /* header */
+    .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
+    .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
+    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
+    .brand span{font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
+    .tagline{color:var(--muted); font-size:14px; opacity:.9; margin-top:2px}
+    .actions{display:flex; gap:10px}
+    .chip{
+      width:44px; height:44px; display:grid; place-items:center;
+      border-radius:14px; background:var(--glass-bg);
+      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
+    }
+    .cart-badge{
+      position:absolute; transform:translate(14px,-14px);
+      background:#ff9e3d; color:#101217; font-weight:800;
+      min-width:26px; height:26px; padding:0 6px; border-radius:999px;
+      display:grid; place-items:center; font-size:13px; border:2px solid #11151b;
     }
 
-    header{
-      padding: clamp(16px, 2.8vw, 28px);
-      padding-bottom: 8px;
-    }
-    .brand{
-      font-weight: 800;
-      letter-spacing:.3px;
-      line-height:1.1;
-      font-size: clamp(28px, 6vw, 52px);
-    }
-    .brand em{ color:#ff7a18; font-style:normal; }
-
-    .strap{
-      margin-top:6px;
-      color:var(--muted);
-      font-size: clamp(14px, 2.8vw, 18px);
-    }
-
-    main{padding: 0 clamp(16px, 3vw, 28px) 28px;}
-
-    .title{
-      margin: 6px 0 10px;
-      font-weight: 800;
-      letter-spacing:.2px;
+    /* headline */
+    h1{
+      margin:10px 0 0;
+      font-weight:900; line-height:1.05;
       font-size: clamp(28px, 7.2vw, 56px);
-      line-height:1.05;
-      text-shadow: 0 6px 28px rgba(0,0,0,.55);
+      text-wrap:balance;
+      text-shadow: 0 2px 18px rgba(0,0,0,.45);
     }
-    .subtitle{
-      margin: 0 0 14px;
-      color: var(--muted);
-      font-size: clamp(15px, 3.2vw, 20px);
+    .subhead{color:var(--muted); margin-top:6px; font-size:clamp(14px, 2.8vw, 18px)}
+
+    /* center: logo droplet */
+    .stage{display:grid; place-items:center; margin: clamp(14px, 3vw, 24px) 0 0}
+    .logoWrap{
+      position:relative;
+      width:min(82vw, 420px);
+      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color: transparent;
+      filter: drop-shadow(0 12px 60px rgba(0,0,0,.55));
+    }
+    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
+    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
+    /* puls podczas nagrywania */
+    .listening .logoWrap{animation: pulse 1.1s ease-in-out infinite}
+    @keyframes pulse{
+      0%,100%{ filter: drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform: scale(1)}
+      50%{    filter: drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform: scale(1.015)}
     }
 
-    /* HERO */
-    .hero{
-      position: relative;
-      display: grid;
-      place-items: center;
-      margin-top: 10px;
-    }
-    .badge{
-      width: min(78vw, 460px);
-      max-width: 520px;
-      user-select:none;
-      -webkit-user-drag:none;
-      cursor:pointer;
-      transform-origin: 50% 60%;
-      transition: transform .22s ease, filter .22s ease;
-      filter: drop-shadow(0 18px 40px rgba(0,0,0,.45));
-      outline: none;
-    }
-    .badge:active{ transform: scale(.985); }
-    .badge.pulsing .mic-head{
-      animation: glow 1.6s ease-in-out infinite;
-    }
-    @keyframes glow{
-      0%,100%{ filter: drop-shadow(0 0 10px #00d3ff) drop-shadow(0 0 2px #00d3ff);}
-      50%{ filter: drop-shadow(0 0 26px #39e4ff) drop-shadow(0 0 8px #39e4ff);}
-    }
-
-    /* TRANSCRIPT right under the drop */
-    .transcript{
-      width: min(900px, 96%);
-      margin: 14px auto 0;
-      padding: 16px 18px;
-      font-size: clamp(16px, 3.6vw, 18px);
+    /* transcription directly under droplet */
+    .asr{
+      margin: clamp(8px, 2vw, 14px) auto 0;
+      width:min(92vw, 720px);
+      border-radius:20px; padding:18px 20px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd);
+      backdrop-filter: blur(var(--glass-blur));
       display:flex; align-items:center; gap:10px;
+      box-shadow: 0 12px 50px rgba(0,0,0,.35);
     }
-    .dot{width:8px;height:8px;border-radius:50%;background:#7dd3fc;box-shadow:0 0 8px #7dd3fc;}
-    .ghost{opacity:.55}
+    .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
+    .text{flex:1; min-height:1.2em}
+    .ghost{color:var(--muted)}
+    .micBtn{
+      width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
+      background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
+      display:grid; place-items:center; cursor:pointer;
+    }
 
-    /* FOOTER TILES */
-    .tiles{
-      position: sticky;
-      bottom: 14px;
-      display:grid;
-      grid-template-columns: repeat(3,1fr);
-      gap: 14px;
-      width: min(980px, 96%);
-      margin: 22px auto 6px;
-    }
-    .tile{
-      padding: 16px 18px;
-      display:flex; gap:10px; align-items:center; justify-content:center;
-      font-weight:600;
-      font-size: 18px;
-      color:var(--text);
-      transition: transform .15s ease, background .2s ease, border-color .2s ease;
-    }
-    .tile:active{ transform: translateY(1px) scale(.99); }
-    .tile .emoji{font-size:22px}
-
-    /* little toast for errors / ok */
+    /* toast summary – backend info, nie koliduje z asr */
     .toast{
-      position: fixed; left:50%; transform:translateX(-50%);
-      bottom: calc(14px + 76px);
-      padding: 14px 16px;
-      max-width: 92vw;
-      color:#fee2e2; border:1px solid rgba(255,255,255,.1);
-      background: rgba(190,43,43,.22);
-      border-radius: 14px; box-shadow:var(--shadow);
+      position: fixed; left:50%; translate:-50% 0;
+      bottom: calc(120px + env(safe-area-inset-bottom));
+      width:min(92vw,740px);
+      border-radius:20px; padding:16px 18px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd);
+      backdrop-filter: blur(var(--glass-blur));
+      box-shadow:0 12px 60px rgba(0,0,0,.4);
       display:none;
     }
-    .toast.show{ display:block; }
+    .toast.show{display:block}
+    .row{display:flex; align-items:center; gap:10px; margin:6px 0; color:#e9ecf6}
+    .row .b{font-weight:700; opacity:.92}
 
-    /* Responsive tuning */
-    @media (min-width: 820px){
-      .hero{ margin-top: 6px; }
-      .transcript{ margin-top: 16px; }
+    /* bottom dock */
+    .dock{
+      margin-top: clamp(16px, 3.8vh, 30px);
+      display:flex; gap:14px; justify-content:center; flex-wrap:wrap;
     }
+    .tile{
+      display:flex; align-items:center; gap:12px;
+      min-width: 150px; padding:14px 18px;
+      border-radius:22px; background:var(--glass-bg);
+      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
+      color:#fff; font-weight:700;
+    }
+    .tile .i{font-size:22px}
+    .tile.active{outline:2px solid rgba(33,212,253,.6)}
+
+    /* helpers */
+    .hidden{display:none !important}
+    a,button{color:inherit}
   </style>
 </head>
 <body>
-  <header>
-    <div class="brand"><em>Free</em> Flow</div>
-    <div class="strap">Voice to order — tryb testowy, bez profilowania</div>
-  </header>
+  <div class="page" id="app">
 
-  <main>
-    <h1 class="title">Złóż zamówienie</h1>
-    <p class="subtitle">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</p>
+    <!-- top -->
+    <header class="topbar">
+      <div>
+        <div class="brand"><b>Free</b><span>Flow</span></div>
+        <div class="tagline">Voice to order — tryb testowy, bez profilowania</div>
+      </div>
+      <div class="actions">
+        <div class="chip" aria-label="Menu" title="Menu">≡</div>
+        <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">
+          🛒 <span class="cart-badge" id="cartCount">11</span>
+        </div>
+      </div>
+    </header>
 
-    <!-- HERO: logo-kropla — kliknięcie start/stop -->
-    <section class="hero">
-      <svg id="badge" class="badge" viewBox="0 0 600 740" aria-label="FreeFlow – naciśnij, aby mówić" role="button" tabindex="0">
-        <!-- mikrofon + fale -->
-        <defs>
-          <radialGradient id="g1" cx="50%" cy="40%" r="60%">
-            <stop offset="0%" stop-color="#0ef"/>
-            <stop offset="100%" stop-color="#021a22"/>
-          </radialGradient>
-          <linearGradient id="g2" x1="0%" y1="0%" x2="100%" y2="100%">
-            <stop offset="0%" stop-color="#ffb457"/>
-            <stop offset="100%" stop-color="#ff4d00"/>
-          </linearGradient>
-        </defs>
-        <!-- tło kropli -->
-        <path d="M300,30 C430,30 535,135 535,265 C535,365 470,450 400,510 C355,548 330,590 314,635 C307,655 296,695 300,710 C294,720 284,720 280,710 C284,695 273,655 266,635 C250,590 225,548 180,510 C110,450 45,365 45,265 C45,135 150,30 300,30 Z"
-              fill="#0b0f12" opacity="0.88" stroke="#1f2937" stroke-width="2"/>
-        <!-- neonowa obwódka kropli -->
-        <path d="M300,30 C430,30 535,135 535,265 C535,365 470,450 400,510 C355,548 330,590 314,635 C307,655 296,695 300,710 C294,720 284,720 280,710 C284,695 273,655 266,635 C250,590 225,548 180,510 C110,450 45,365 45,265 C45,135 150,30 300,30 Z"
-              fill="none" stroke="url(#g2)" stroke-width="6" opacity=".85"/>
+    <!-- headline -->
+    <h1>Złóż zamówienie</h1>
+    <div class="subhead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</div>
 
-        <!-- mikrofon -->
-        <g transform="translate(0,40)">
-          <circle cx="300" cy="250" r="128" fill="url(#g1)" opacity=".55"/>
-          <g class="mic-head">
-            <ellipse cx="338" cy="208" rx="74" ry="74" fill="url(#g2)"/>
-            <rect x="310" y="200" width="36" height="120" rx="10" fill="#121a20"/>
-          </g>
-          <rect x="224" y="340" width="152" height="20" rx="10" fill="#00d3ff" opacity=".8"/>
-        </g>
+    <!-- center: logo -->
+    <section class="stage">
+      <div class="logoWrap" id="logoWrap">
+        <img src="assets/freeflow.png" alt="FreeFlow" width="840" height="1080" />
+        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
+      </div>
 
-        <!-- ikonki usług -->
-        <g transform="translate(0,420)" opacity=".95">
-          <rect x="210" y="0" width="180" height="56" rx="12" fill="rgba(0,0,0,.35)" stroke="rgba(255,255,255,.08)"/>
-          <text x="240" y="36" fill="#7ee3ff" font-size="24">🍽️</text>
-          <text x="290" y="36" fill="#ffd27e" font-size="24">🚕</text>
-          <text x="340" y="36" fill="#7ee3ff" font-size="24">🏠</text>
-        </g>
-      </svg>
-
-      <!-- TRANSKRYPCJA: tuż pod kroplą -->
-      <div id="transcript" class="glass transcript">
-        <span class="dot" id="dot"></span>
-        <span id="text" class="ghost">Powiedz, co chcesz zamówić…</span>
+      <!-- transcription under droplet -->
+      <div class="asr" id="asrBox" role="status" aria-live="polite">
+        <div class="dot" id="dot"></div>
+        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
+        <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
       </div>
     </section>
 
-    <!-- kafelki -->
-    <div class="tiles">
-      <button class="glass tile" data-intent="food"><span class="emoji">🍽️</span> Jedzenie</button>
-      <button class="glass tile" data-intent="taxi"><span class="emoji">🚕</span> Taxi</button>
-      <button class="glass tile" data-intent="hotel"><span class="emoji">🏠</span> Hotel</button>
+    <!-- toast summary (np. Backend: ok) -->
+    <div class="toast show" id="summary">
+      <div class="row"><span>✅</span><span class="b">Backend:</span><span id="sumDish">ok</span></div>
+      <div class="row" id="rowPlace" style="display:none"><span>📍</span><span class="b">Miejsce:</span><span id="sumPlace">—</span></div>
+      <div class="row" id="rowTime"  style="display:none"><span>⏰</span><span class="b">Godzina:</span><span id="sumTime">—</span></div>
     </div>
-  </main>
 
-  <div id="toast" class="toast glass" role="status" aria-live="polite"></div>
+    <!-- bottom dock -->
+    <nav class="dock" aria-label="Kategorie">
+      <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
+      <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
+      <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
+    </nav>
 
-  <script>
-    // ===== UI helpers =====
-    const $ = s => document.querySelector(s);
-    const badge = $('#badge');
-    const transcript = $('#text');
-    const dot = $('#dot');
-    const toast = $('#toast');
+  </div>
 
-    const showToast = (msg, ok=false) => {
-      toast.textContent = msg;
-      toast.style.background = ok ? 'rgba(33, 180, 120, .22)' : 'rgba(190, 43, 43, .22)';
-      toast.style.color = ok ? '#e9fff7' : '#ffecec';
-      toast.classList.add('show');
-      clearTimeout(showToast._t);
-      showToast._t = setTimeout(()=>toast.classList.remove('show'), 2600);
-    };
-
-    // ===== Speech: guard for unsupported =====
-    const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
-    let rec = null, listening = false, finalBuffer = '';
-
-    function applyInterim(s){
-      if(!s){ transcript.textContent = finalBuffer || '…'; return; }
-      transcript.textContent = (finalBuffer ? finalBuffer + ' ' : '') + s;
-    }
-    function toggleBadgePulse(on){
-      badge.classList.toggle('pulsing', !!on);
-      dot.style.background = on ? '#34d399' : '#7dd3fc';
-      transcript.classList.toggle('ghost', !on && !finalBuffer);
-    }
-
-    function startRec(){
-      if(!Rec){ showToast('Rozpoznawanie mowy niedostępne w tej przeglądarce. Użyj Chrome/Edge.', false); return; }
-      if(listening) return;
-
-      if(!rec){
-        rec = new Rec();
-        rec.lang = 'pl-PL';
-        rec.interimResults = true;
-        rec.continuous = false;
-
-        rec.onresult = (e) => {
-          let interim = '';
-          for(const res of e.results){
-            const txt = res[0].transcript.trim();
-            if(res.isFinal){
-              if(txt) finalBuffer = finalBuffer ? (finalBuffer + ' ' + txt) : txt;
-            } else {
-              interim += txt + ' ';
-            }
-          }
-          applyInterim(interim.trim());
-        };
-        rec.onerror = (e)=>{ showToast('Mikrofon: ' + (e.error||'błąd')); stopRec(); };
-        rec.onend = ()=>{
-          listening = false; toggleBadgePulse(false);
-          // krótka odpowiedź TTS (możesz wyłączyć)
-          if(finalBuffer){ speak('Zapisano: ' + finalBuffer); }
-        };
-      }
-      finalBuffer = '';
-      transcript.textContent = 'Słucham…';
-      listening = true; toggleBadgePulse(true);
-      try{ rec.start(); }catch(_){}
-    }
-    function stopRec(){
-      if(rec && listening){ try{ rec.stop(); }catch(_){} }
-      listening = false; toggleBadgePulse(false);
-    }
-
-    // TTS (krótkie potwierdzenia)
-    function speak(text){
-      if(!('speechSynthesis' in window)) return;
-      const u = new SpeechSynthesisUtterance(text);
-      u.lang = 'pl-PL';
-      u.rate = 1; u.pitch = 1; u.volume = .9;
-      window.speechSynthesis.speak(u);
-    }
-
-    // ===== Events =====
-    // Logo = toggle
-    const toggleListen = () => listening ? stopRec() : startRec();
-    badge.addEventListener('click', toggleListen);
-    badge.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' '){ e.preventDefault(); toggleListen(); }});
-    // zapobiegnij „tap highlight” i scroll-drag
-    badge.addEventListener('touchstart', e=>{ e.preventDefault(); }, {passive:false});
-
-    // Kafelki => wstawiają prompt do transkrypcji i czytają
-    document.querySelectorAll('.tile').forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        const intent = btn.dataset.intent;
-        let hint = '';
-        if(intent==='food') hint = 'Zamów pizza peperoni na 19:00';
-        if(intent==='taxi') hint = 'Zamów taxi na 18:30 do centrum';
-        if(intent==='hotel') hint = 'Zarezerwuj hotel na jutro';
-        finalBuffer = hint; applyInterim('');
-        speak('Wybrano ' + (intent==='food'?'jedzenie':intent));
-      });
-    });
-
-    // start tips
-    setTimeout(()=>showToast('Kliknij kroplę, by mówić.', true), 600);
-  </script>
+  <!-- logika asystenta -->
+  <script src="freeflow-assistant.js" defer></script>
 </body>
 </html>
