--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     }
     .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
     .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
+
     /* puls podczas nagrywania */
     .listening .logoWrap{animation: pulse 1.1s ease-in-out infinite}
     @keyframes pulse{
@@ -101,7 +102,7 @@
       display:grid; place-items:center; cursor:pointer;
     }
 
-    /* toast summary – backend info, nie koliduje z asr */
+    /* toasty */
     .toast{
       position: fixed; left:50%; translate:-50% 0;
       bottom: calc(120px + env(safe-area-inset-bottom));
@@ -130,10 +131,6 @@
     }
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
-
-    /* helpers */
-    .hidden{display:none !important}
-    a,button{color:inherit}
   </style>
 </head>
 <body>
@@ -160,7 +157,8 @@
     <!-- center: logo -->
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <img src="assets/freeflow.png" alt="FreeFlow" width="840" height="1080" />
+        <!-- domyślnie PNG, a JS dołoży fallbacki jeśli 404 -->
+        <img id="logoImg" src="assets/Freeflowlogo.png" alt="FreeFlow logo" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
@@ -172,11 +170,12 @@
       </div>
     </section>
 
-    <!-- toast summary (np. Backend: ok) -->
-    <div class="toast show" id="summary">
-      <div class="row"><span>✅</span><span class="b">Backend:</span><span id="sumDish">ok</span></div>
-      <div class="row" id="rowPlace" style="display:none"><span>📍</span><span class="b">Miejsce:</span><span id="sumPlace">—</span></div>
-      <div class="row" id="rowTime"  style="display:none"><span>⏰</span><span class="b">Godzina:</span><span id="sumTime">—</span></div>
+    <!-- backend toast -->
+    <div class="toast show" id="backendToast">
+      <div class="row">
+        <span>✅</span><span class="b">Backend:</span>
+        <span id="backendMsg">ok</span>
+      </div>
     </div>
 
     <!-- bottom dock -->
@@ -190,5 +189,28 @@
 
   <!-- logika asystenta -->
   <script src="freeflow-assistant.js" defer></script>
+
+  <!-- fallback łańcuch dla logo -->
+  <script>
+    (function(){
+      const img = document.getElementById('logoImg');
+      const candidates = [
+        'assets/Freeflowlogo.png',
+        'assets/freeflow-logo.svg',
+        'assets/logo.png',
+        'logo/freeflow-core.svg'
+      ];
+      let i = 0;
+      img.onerror = function(){
+        i++;
+        if(i < candidates.length){
+          img.src = candidates[i];
+        }else{
+          img.onerror = null;
+        }
+      };
+      // start od i=0 (ustawione w src); jeśli nie istnieje – przełączy
+    })();
+  </script>
 </body>
 </html>
