--- a/index.html
+++ b/index.html
@@ -20,114 +20,84 @@
     body{
       margin:0;
       color:var(--text);
-      font: 500 16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Color Emoji", "Apple Color Emoji";
+      font: 500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial,"Noto Color Emoji","Apple Color Emoji";
       background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
     }
     .page{
       min-height:100dvh;
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-      padding: clamp(12px, 2.2vw, 24px);
-      padding-bottom: calc(24px + env(safe-area-inset-bottom));
-      background: radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
-      backdrop-filter: blur(.5px);
+      display:flex; flex-direction:column; gap:16px;
+      padding:clamp(12px,2.2vw,24px);
+      padding-bottom:calc(24px + env(safe-area-inset-bottom));
+      background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
+      backdrop-filter:blur(.5px);
     }
 
-    /* header */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
-    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
-    .brand span{font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
+    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
+    .brand span{font-weight:900; font-size:clamp(24px,4.5vw,36px)}
     .tagline{color:var(--muted); font-size:14px; opacity:.9; margin-top:2px}
     .actions{display:flex; gap:10px}
-    .chip{
-      width:44px; height:44px; display:grid; place-items:center;
-      border-radius:14px; background:var(--glass-bg);
-      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
-    }
-    .cart-badge{
-      position:absolute; transform:translate(14px,-14px);
-      background:#ff9e3d; color:#101217; font-weight:800;
-      min-width:26px; height:26px; padding:0 6px; border-radius:999px;
-      display:grid; place-items:center; font-size:13px; border:2px solid #11151b;
-    }
+    .chip{width:44px;height:44px;display:grid;place-items:center;border-radius:14px;background:var(--glass-bg);border:1px solid var(--glass-brd);backdrop-filter:blur(var(--glass-blur))}
+    .cart-badge{position:absolute;transform:translate(14px,-14px);background:#ff9e3d;color:#101217;font-weight:800;min-width:26px;height:26px;padding:0 6px;border-radius:999px;display:grid;place-items:center;font-size:13px;border:2px solid #11151b}
 
-    /* headline */
-    h1{
-      margin:10px 0 0;
-      font-weight:900; line-height:1.05;
-      font-size: clamp(28px, 7.2vw, 56px);
-      text-wrap:balance;
-      text-shadow: 0 2px 18px rgba(0,0,0,.45);
-    }
-    .subhead{color:var(--muted); margin-top:6px; font-size:clamp(14px, 2.8vw, 18px)}
+    h1{margin:10px 0 0;font-weight:900;line-height:1.05;font-size:clamp(28px,7.2vw,56px);text-wrap:balance;text-shadow:0 2px 18px rgba(0,0,0,.45)}
+    .subhead{color:var(--muted);margin-top:6px;font-size:clamp(14px,2.8vw,18px)}
 
-    /* center: logo droplet */
-    .stage{display:grid; place-items:center; margin: clamp(14px, 3vw, 24px) 0 0}
-    .logoWrap{
-      position:relative;
-      width:min(82vw, 420px);
-      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color: transparent;
-      filter: drop-shadow(0 12px 60px rgba(0,0,0,.55));
-    }
-    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
-    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
+    .stage{display:grid;place-items:center;margin:clamp(14px,3vw,24px) 0 0}
+    .logoWrap{position:relative;width:min(82vw,420px);user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:transparent;filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
+    .logoWrap img{width:100%;height:auto;display:block;pointer-events:none}
+    .hit{position:absolute;inset:0;border-radius:36px;background:transparent;border:0}
 
-    /* puls podczas nagrywania */
-    .listening .logoWrap{animation: pulse 1.1s ease-in-out infinite}
+    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
     @keyframes pulse{
-      0%,100%{ filter: drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform: scale(1)}
-      50%{    filter: drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform: scale(1.015)}
+      0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36));transform:scale(1)}
+      50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55));transform:scale(1.015)}
     }
 
-    /* transcription directly under droplet */
     .asr{
-      margin: clamp(8px, 2vw, 14px) auto 0;
-      width:min(92vw, 720px);
+      margin:clamp(8px,2vw,14px) auto 0;
+      width:min(92vw,720px);
       border-radius:20px; padding:18px 20px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd);
-      backdrop-filter: blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px;
-      box-shadow: 0 12px 50px rgba(0,0,0,.35);
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
+      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)
     }
-    .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
-    .text{flex:1; min-height:1.2em}
+    .dot{width:10px;height:10px;border-radius:999px;background:#86e2ff;box-shadow:0 0 16px #86e2ff}
+    .text{flex:1;min-height:1.2em}
     .ghost{color:var(--muted)}
-    .micBtn{
-      width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
-      background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
-      display:grid; place-items:center; cursor:pointer;
-    }
+    .micBtn{width:46px;height:46px;border-radius:14px;border:1px solid var(--glass-brd);background:linear-gradient(180deg,rgba(255,143,67,.18),rgba(33,212,253,.14));display:grid;place-items:center;cursor:pointer}
 
-    /* toasty */
+    /* Backend toast – wyżej + nie blokuje klików */
     .toast{
-      position: fixed; left:50%; translate:-50% 0;
-      bottom: calc(120px + env(safe-area-inset-bottom));
+      position:fixed; left:50%; translate:-50% 0;
+      bottom:calc(180px + env(safe-area-inset-bottom)); /* wyżej niż dock i transkrypcja */
       width:min(92vw,740px);
       border-radius:20px; padding:16px 18px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd);
-      backdrop-filter: blur(var(--glass-blur));
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
       box-shadow:0 12px 60px rgba(0,0,0,.4);
       display:none;
+      pointer-events:none; /* <— nie przechwytuje klików */
     }
     .toast.show{display:block}
-    .row{display:flex; align-items:center; gap:10px; margin:6px 0; color:#e9ecf6}
-    .row .b{font-weight:700; opacity:.92}
+    .row{display:flex;align-items:center;gap:10px;margin:6px 0;color:#e9ecf6}
+    .row .b{font-weight:700;opacity:.92}
 
-    /* bottom dock */
+    /* Dock – jeden rząd */
     .dock{
-      margin-top: clamp(16px, 3.8vh, 30px);
-      display:flex; gap:14px; justify-content:center; flex-wrap:wrap;
+      margin-top:clamp(16px,3.8vh,30px);
+      display:flex; gap:14px; justify-content:center; flex-wrap:nowrap;
+      width:100%;
     }
     .tile{
       display:flex; align-items:center; gap:12px;
-      min-width: 150px; padding:14px 18px;
+      flex:1 1 0;           /* równo dzieli rząd */
+      min-width:0;          /* nie wypycha poza ekran */
+      padding:14px 18px;
       border-radius:22px; background:var(--glass-bg);
-      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
-      color:#fff; font-weight:700;
+      border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
+      color:#fff; font-weight:700; justify-content:center;
     }
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
@@ -135,8 +105,6 @@
 </head>
 <body>
   <div class="page" id="app">
-
-    <!-- top -->
     <header class="topbar">
       <div>
         <div class="brand"><b>Free</b><span>Flow</span></div>
@@ -150,19 +118,15 @@
       </div>
     </header>
 
-    <!-- headline -->
     <h1>Złóż zamówienie</h1>
     <div class="subhead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</div>
 
-    <!-- center: logo -->
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <!-- domyślnie PNG, a JS dołoży fallbacki jeśli 404 -->
         <img id="logoImg" src="assets/Freeflowlogo.png" alt="FreeFlow logo" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
-      <!-- transcription under droplet -->
       <div class="asr" id="asrBox" role="status" aria-live="polite">
         <div class="dot" id="dot"></div>
         <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
@@ -170,27 +134,20 @@
       </div>
     </section>
 
-    <!-- backend toast -->
     <div class="toast show" id="backendToast">
-      <div class="row">
-        <span>✅</span><span class="b">Backend:</span>
-        <span id="backendMsg">ok</span>
-      </div>
+      <div class="row"><span>✅</span><span class="b">Backend:</span><span id="backendMsg">ok</span></div>
     </div>
 
-    <!-- bottom dock -->
     <nav class="dock" aria-label="Kategorie">
-      <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
-      <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
-      <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
+      <button class="tile active" id="tileFood"><span class="i">🍽️</span><span>Jedzenie</span></button>
+      <button class="tile" id="tileTaxi"><span class="i">🚕</span><span>Taxi</span></button>
+      <button class="tile" id="tileHotel"><span class="i">🏡</span><span>Hotel</span></button>
     </nav>
-
   </div>
 
-  <!-- logika asystenta -->
   <script src="freeflow-assistant.js" defer></script>
 
-  <!-- fallback łańcuch dla logo -->
+  <!-- logo fallback chain -->
   <script>
     (function(){
       const img = document.getElementById('logoImg');
@@ -203,13 +160,9 @@
       let i = 0;
       img.onerror = function(){
         i++;
-        if(i < candidates.length){
-          img.src = candidates[i];
-        }else{
-          img.onerror = null;
-        }
+        if(i < candidates.length){ img.src = candidates[i]; }
+        else{ img.onerror = null; }
       };
-      // start od i=0 (ustawione w src); jeśli nie istnieje – przełączy
     })();
   </script>
 </body>
