--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       -moz-osx-font-smoothing:grayscale;
     }
     .page{
-      min-height:100dvh;
-      display:flex; flex-direction:column; gap:16px;
+      min-height:100dvh; display:flex; flex-direction:column; gap:16px;
       padding:clamp(12px,2.2vw,24px);
       padding-bottom:calc(24px + env(safe-area-inset-bottom));
       background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
       backdrop-filter:blur(.5px);
     }
 
+    /* header */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
     .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
@@ -43,62 +43,43 @@
     .chip{width:44px;height:44px;display:grid;place-items:center;border-radius:14px;background:var(--glass-bg);border:1px solid var(--glass-brd);backdrop-filter:blur(var(--glass-blur))}
     .cart-badge{position:absolute;transform:translate(14px,-14px);background:#ff9e3d;color:#101217;font-weight:800;min-width:26px;height:26px;padding:0 6px;border-radius:999px;display:grid;place-items:center;font-size:13px;border:2px solid #11151b}
 
+    /* headline */
     h1{margin:10px 0 0;font-weight:900;line-height:1.05;font-size:clamp(28px,7.2vw,56px);text-wrap:balance;text-shadow:0 2px 18px rgba(0,0,0,.45)}
     .subhead{color:var(--muted);margin-top:6px;font-size:clamp(14px,2.8vw,18px)}
 
+    /* center */
     .stage{display:grid;place-items:center;margin:clamp(14px,3vw,24px) 0 0}
     .logoWrap{position:relative;width:min(82vw,420px);user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:transparent;filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
     .logoWrap img{width:100%;height:auto;display:block;pointer-events:none}
     .hit{position:absolute;inset:0;border-radius:36px;background:transparent;border:0}
-
     .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
     @keyframes pulse{
       0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36));transform:scale(1)}
       50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55));transform:scale(1.015)}
     }
 
+    /* ASR box (z wklejonym statusem backendu) */
     .asr{
       margin:clamp(8px,2vw,14px) auto 0;
       width:min(92vw,720px);
-      border-radius:20px; padding:18px 20px;
+      border-radius:20px; padding:14px 16px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)
+      box-shadow:0 12px 50px rgba(0,0,0,.35);
     }
+    .asrRow{display:flex; align-items:center; gap:10px}
+    .status{
+      display:flex; align-items:center; gap:10px;
+      font-weight:600; color:#e6f6e6; margin-bottom:8px; opacity:.95
+    }
+    .status .ok{filter:drop-shadow(0 0 6px #38d16a)}
     .dot{width:10px;height:10px;border-radius:999px;background:#86e2ff;box-shadow:0 0 16px #86e2ff}
     .text{flex:1;min-height:1.2em}
     .ghost{color:var(--muted)}
     .micBtn{width:46px;height:46px;border-radius:14px;border:1px solid var(--glass-brd);background:linear-gradient(180deg,rgba(255,143,67,.18),rgba(33,212,253,.14));display:grid;place-items:center;cursor:pointer}
 
-    /* Backend toast – wyżej + nie blokuje klików */
-    .toast{
-      position:fixed; left:50%; translate:-50% 0;
-      bottom:calc(180px + env(safe-area-inset-bottom)); /* wyżej niż dock i transkrypcja */
-      width:min(92vw,740px);
-      border-radius:20px; padding:16px 18px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      box-shadow:0 12px 60px rgba(0,0,0,.4);
-      display:none;
-      pointer-events:none; /* <— nie przechwytuje klików */
-    }
-    .toast.show{display:block}
-    .row{display:flex;align-items:center;gap:10px;margin:6px 0;color:#e9ecf6}
-    .row .b{font-weight:700;opacity:.92}
-
-    /* Dock – jeden rząd */
-    .dock{
-      margin-top:clamp(16px,3.8vh,30px);
-      display:flex; gap:14px; justify-content:center; flex-wrap:nowrap;
-      width:100%;
-    }
-    .tile{
-      display:flex; align-items:center; gap:12px;
-      flex:1 1 0;           /* równo dzieli rząd */
-      min-width:0;          /* nie wypycha poza ekran */
-      padding:14px 18px;
-      border-radius:22px; background:var(--glass-bg);
-      border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      color:#fff; font-weight:700; justify-content:center;
-    }
+    /* dock – jedna linia */
+    .dock{margin-top:clamp(16px,3.8vh,30px);display:flex;gap:14px;justify-content:center;flex-wrap:nowrap;width:100%}
+    .tile{display:flex;align-items:center;gap:12px;flex:1 1 0;min-width:0;padding:14px 18px;border-radius:22px;background:var(--glass-bg);border:1px solid var(--glass-brd);backdrop-filter:blur(var(--glass-blur));color:#fff;font-weight:700;justify-content:center}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
   </style>
@@ -128,15 +109,16 @@
       </div>
 
       <div class="asr" id="asrBox" role="status" aria-live="polite">
-        <div class="dot" id="dot"></div>
-        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
-        <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
+        <div class="status" id="backendStatus">
+          <span class="ok">✅</span> <span><b>Backend:</b> <span id="backendMsg">ok</span></span>
+        </div>
+        <div class="asrRow">
+          <div class="dot" id="dot"></div>
+          <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
+          <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
+        </div>
       </div>
     </section>
-
-    <div class="toast show" id="backendToast">
-      <div class="row"><span>✅</span><span class="b">Backend:</span><span id="backendMsg">ok</span></div>
-    </div>
 
     <nav class="dock" aria-label="Kategorie">
       <button class="tile active" id="tileFood"><span class="i">🍽️</span><span>Jedzenie</span></button>
