--- a/index.html
+++ b/index.html
@@ -18,110 +18,58 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      color:var(--text);
-      font: 500 16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Color Emoji", "Apple Color Emoji";
+      margin:0; color:var(--text);
+      font:500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
       background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
+      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
     }
-    .page{
-      min-height:100dvh;
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-      padding: clamp(12px, 2.2vw, 24px);
-      padding-bottom: calc(24px + env(safe-area-inset-bottom));
-      background: radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
-      backdrop-filter: blur(.5px);
+    .page{min-height:100dvh; display:flex; flex-direction:column; gap:16px;
+      padding:clamp(12px,2.2vw,24px);
+      padding-bottom:calc(24px + env(safe-area-inset-bottom));
+      background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
+      backdrop-filter:blur(.5px);
     }
 
     /* header */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
-    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
-    .brand span{font-weight:900; font-size:clamp(24px, 4.5vw, 36px)}
-    .tagline{color:var(--muted); font-size:14px; opacity:.9; margin-top:2px}
+    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
+    .brand span{font-weight:900; font-size:clamp(24px,4.5vw,36px)}
+    .tagline{color:var(--muted); font-size:clamp(14px,2.6vw,16px); margin-top:4px}
+    .subtag{color:var(--muted); font-size:clamp(12px,2.2vw,14px); opacity:.9; margin-top:2px}
     .actions{display:flex; gap:10px}
-    .chip{
-      width:44px; height:44px; display:grid; place-items:center;
-      border-radius:14px; background:var(--glass-bg);
-      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
-    }
-    .cart-badge{
-      position:absolute; transform:translate(14px,-14px);
-      background:#ff9e3d; color:#101217; font-weight:800;
-      min-width:26px; height:26px; padding:0 6px; border-radius:999px;
-      display:grid; place-items:center; font-size:13px; border:2px solid #11151b;
-    }
+    .chip{width:44px; height:44px; display:grid; place-items:center; border-radius:14px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
+    .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
+      min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
 
-    /* headline — kompakt */
-    h1{
-      margin: 6px 0 0;
-      font-weight:900; line-height:1.03;
-      font-size: clamp(26px, 6.4vw, 48px);
-      text-wrap: balance;
-      text-shadow: 0 2px 18px rgba(0,0,0,.45);
-    }
-    .subhead{
-      color:var(--muted);
-      margin-top:4px;
-      font-size:clamp(13px, 2.4vw, 16px);
-      opacity:.95;
-    }
-
-    /* center: logo droplet */
-    .stage{display:grid; place-items:center; margin: clamp(14px, 3vw, 24px) 0 0}
-    .logoWrap{
-      position:relative;
-      width:min(82vw, 420px);
-      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color: transparent;
-      filter: drop-shadow(0 12px 60px rgba(0,0,0,.55));
-    }
+    /* stage / logo */
+    .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
+    .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
+      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
     .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
     .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
-    /* puls podczas nagrywania */
-    .listening .logoWrap{animation: pulse 1.1s ease-in-out infinite}
-    @keyframes pulse{
-      0%,100%{ filter: drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform: scale(1)}
-      50%{    filter: drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform: scale(1.015)}
-    }
+    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
+    @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
 
-    /* transcription directly under droplet */
-    .asr{
-      margin: clamp(8px, 2vw, 14px) auto 0;
-      width:min(92vw, 720px);
-      border-radius:20px; padding:18px 20px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd);
-      backdrop-filter: blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px;
-      box-shadow: 0 12px 50px rgba(0,0,0,.35);
-    }
+    /* ASR */
+    .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
+      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
     .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
     .text{flex:1; min-height:1.2em}
     .ghost{color:var(--muted)}
-    .micBtn{
-      width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
+    .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
       background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
-      display:grid; place-items:center; cursor:pointer;
-    }
+      display:grid; place-items:center; cursor:pointer}
 
-    /* bottom dock */
-    .dock{
-      margin-top: clamp(16px, 3.8vh, 30px);
-      display:flex; gap:14px; justify-content:center; flex-wrap:wrap;
-    }
-    .tile{
-      display:flex; align-items:center; gap:12px;
-      min-width: 150px; padding:14px 18px;
-      border-radius:22px; background:var(--glass-bg);
-      border:1px solid var(--glass-brd); backdrop-filter: blur(var(--glass-blur));
-      color:#fff; font-weight:700;
-    }
+    /* dock */
+    .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
+    .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
 
-    /* helpers */
     .hidden{display:none !important}
     a,button{color:inherit}
   </style>
@@ -129,11 +77,13 @@
 <body>
   <div class="page" id="app">
 
-    <!-- top -->
+    <!-- header -->
     <header class="topbar">
       <div>
         <div class="brand"><b>Free</b><span>Flow</span></div>
-        <div class="tagline">Voice to order — tryb testowy, bez profilowania</div>
+        <!-- nowa, krótka linia pod FreeFlow -->
+        <div class="tagline">Voice to order — Złóż zamówienie</div>
+        <div class="subtag">Restauracja, taxi albo hotel?</div>
       </div>
       <div class="actions">
         <div class="chip" aria-label="Menu" title="Menu">≡</div>
@@ -143,18 +93,16 @@
       </div>
     </header>
 
-    <!-- headline -->
-    <h1>Voice to order — Złóż zamówienie</h1>
-    <div class="subhead">Restauracja, taxi albo hotel?</div>
+    <!-- (USUNIĘTO duży h1 i subhead) -->
 
-    <!-- center: logo -->
+    <!-- center: logo + asr -->
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <img src="assets/freeflow.png" alt="FreeFlow" width="840" height="1080" />
+        <!-- użyj SVG; jeśli nie masz tego pliku, podmień src na istniejący (np. assets/Freeflowlogo.png) -->
+        <img src="assets/freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
-      <!-- transcription under droplet -->
       <div class="asr" id="asrBox" role="status" aria-live="polite">
         <div class="dot" id="dot"></div>
         <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
@@ -162,7 +110,6 @@
       </div>
     </section>
 
-    <!-- bottom dock -->
     <nav class="dock" aria-label="Kategorie">
       <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
       <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
@@ -179,82 +126,33 @@
     const transcript = document.getElementById('transcript');
     const dot        = document.getElementById('dot');
 
-    /* ----------------------- ASR helpers ----------------------- */
-
-    // 1) prosta deduplikacja typu "dwie dwie"
     const dedupeWords = (s)=> s.replace(/\b(\w+)(?:\s+\1){1,}\b/gi, '$1');
-
-    // 2) normalizacja typowych błędów rozpoznawania (PL)
     const normalizeASR = (input) => {
       let s = ' ' + input + ' ';
-
-      // capricciosa — częste "kaplicosa/kapliczoza/kapliccosa/capriciosa" itd.
-      s = s.replace(/\bkaplic(?:io|io|o|ó|a)sa\b/gi, ' capricciosa ');
+      s = s.replace(/\bkaplic(?:io|o|ó|a)sa\b/gi, ' capricciosa ');
       s = s.replace(/\bkaplicz?oza\b/gi,          ' capricciosa ');
       s = s.replace(/\bcapriciosa\b/gi,           ' capricciosa ');
       s = s.replace(/\bcapricc?io?sa\b/gi,        ' capricciosa ');
-
-      // kugel — często rozpoznawane jako "google"
       s = s.replace(/\bgoogle\b/gi,               ' kugel ');
-
-      // Ariel (restauracja) — często "Arial"
       s = s.replace(/\barial\b/gi,                ' ariel ');
-
-      // drobne korekty kuchni włoskiej
-      s = s.replace(/\bquatro\s+formag+i\b/gi,    ' quattro formaggi ');
-      s = s.replace(/\bmargherit+a?\b/gi,         ' margherita ');
-
-      // porządkuj spacje
       return s.trim().replace(/\s{2,}/g,' ');
     };
 
-    // 3) prosty parser wyłuskujący potrawę + godzinę (demo)
-    const parseOrder = (s)=>{
-      const text = s.toLowerCase();
-      const mTime = text.match(/\b(?:na|o)\s*(\d{1,2})(?::?(\d{2}))?\b/);
-      const time  = mTime ? (mTime[1].padStart(2,'0') + ':' + (mTime[2] ? mTime[2] : '00')) : null;
+    const ASR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    let rec = null, recognizing = false;
 
-      // Potrawę bierzemy z końcówki zdania po słowach kluczowych
-      let dish = null;
-      const mDish = text.match(/\b(?:poprosz?ę|zamów|wezmę|chcę|dla mnie|jedna|jedną|dwie|trzy|cztery)?\s*([a-ząćęłńóśżź\- ]{3,})$/i);
-      if(mDish){
-        dish = mDish[1]
-          .replace(/\b(na|o)\b.*$/,'')  // utnij godzinę
-          .trim();
-      }
-      return { dish, time };
-    };
-
-    // 4) TTS – wymuszenie przyjemnej wymowy niektórych nazw
-    const ttsSay = (text) => {
-      try{
-        // tylko na głos – drobna „fonetyka” PL
-        const tts = text
-          .replace(/\bAriel\b/g, 'Ari-el'); // NBSP-hyphen pomaga TTS
-        const u = new SpeechSynthesisUtterance(tts);
-        u.lang = 'pl-PL';
-        window.speechSynthesis.speak(u);
-      }catch(_){}
-    };
-
-    // UI helpers
     const setListening = (on)=>{
       app.classList.toggle('listening', on);
       dot.style.background = on ? '#21d4fd' : '#86e2ff';
       transcript.classList.toggle('ghost', !on && !transcript.textContent.trim());
     };
 
-    const ASR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    let rec = null, recognizing = false;
-
     const startRec = ()=>{
       if(!ASR){ transcript.textContent = 'Rozpoznawanie mowy wymaga Chrome/Edge.'; return; }
       if(recognizing){ try{rec && rec.stop()}catch(_){} return; }
 
       rec = new ASR();
-      rec.lang = 'pl-PL';
-      rec.interimResults = true;
-      rec.continuous = false;
+      rec.lang = 'pl-PL'; rec.interimResults = true; rec.continuous = false;
 
       rec.onstart = ()=>{ recognizing=true; setListening(true); transcript.textContent='Słucham…'; transcript.classList.remove('ghost'); };
       rec.onerror = (e)=>{ recognizing=false; setListening(false); transcript.textContent = 'Błąd rozpoznawania: '+(e.error||''); };
@@ -266,28 +164,16 @@
           const t = ev.results[i][0].transcript;
           if(ev.results[i].isFinal) finalText += t; else interim += t;
         }
-        // dedupe + normalizacja
         const raw = (finalText || interim).trim();
         const txt = normalizeASR(dedupeWords(raw));
         transcript.textContent = txt || 'Słucham…';
-
-        if(finalText){
-          const {dish, time} = parseOrder(txt);
-          // Potwierdzenie głosowe (krótkie)
-          const pieces = [];
-          if(dish) pieces.push(`Zamawiam ${dish}`);
-          if(time) pieces.push(`na ${time}`);
-          if(pieces.length){ ttsSay(`OK. ${pieces.join(' ')}.`); }
-        }
       };
 
       try{ rec.start(); }catch(_){}
     };
 
-    // bind UI
     [logoBtn, micBtn].forEach(el=> el.addEventListener('click', startRec, {passive:true}));
 
-    // kafelki – tylko podświetlenie trybu (logika zamówień zostaje po Twojej stronie)
     const tiles = {
       food: document.getElementById('tileFood'),
       taxi: document.getElementById('tileTaxi'),
@@ -301,10 +187,7 @@
     tiles.taxi.addEventListener('click', ()=>selectTile('taxi'));
     tiles.hotel.addEventListener('click',()=>selectTile('hotel'));
 
-    // pierwsze wejście
     transcript.textContent='Powiedz, co chcesz zamówić…';
-
-    // sprzątanie TTS przy wyjściu
     window.addEventListener('beforeunload', ()=>{ try{window.speechSynthesis.cancel()}catch(_){}});
 
   })();
