--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
       backdrop-filter:blur(.5px);
     }
-
-    /* header */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
     .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
@@ -42,8 +40,6 @@
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
     .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
       min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
-
-    /* stage / logo */
     .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
     .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
       filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
@@ -51,8 +47,6 @@
     .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
     .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
     @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
-
-    /* ASR */
     .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
       display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
@@ -62,26 +56,20 @@
     .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
       background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
       display:grid; place-items:center; cursor:pointer}
-
-    /* dock */
     .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
     .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
-
     .hidden{display:none !important}
     a,button{color:inherit}
   </style>
 </head>
 <body>
   <div class="page" id="app">
-
-    <!-- header -->
     <header class="topbar">
       <div>
         <div class="brand"><b>Free</b><span>Flow</span></div>
-        <!-- nowa, krótka linia pod FreeFlow -->
         <div class="tagline">Voice to order — Złóż zamówienie</div>
         <div class="subtag">Restauracja, taxi albo hotel?</div>
       </div>
@@ -93,13 +81,10 @@
       </div>
     </header>
 
-    <!-- (USUNIĘTO duży h1 i subhead) -->
-
-    <!-- center: logo + asr -->
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <!-- użyj SVG; jeśli nie masz tego pliku, podmień src na istniejący (np. assets/Freeflowlogo.png) -->
-        <img src="assets/freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
+        <!-- >>> TU: poprawiona nazwa pliku SVG <<< -->
+        <img src="assets/Freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
@@ -115,82 +100,9 @@
       <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
       <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
     </nav>
-
   </div>
 
-  <script>
-  ;(() => {
-    const app        = document.getElementById('app');
-    const logoBtn    = document.getElementById('logoBtn');
-    const micBtn     = document.getElementById('micBtn');
-    const transcript = document.getElementById('transcript');
-    const dot        = document.getElementById('dot');
-
-    const dedupeWords = (s)=> s.replace(/\b(\w+)(?:\s+\1){1,}\b/gi, '$1');
-    const normalizeASR = (input) => {
-      let s = ' ' + input + ' ';
-      s = s.replace(/\bkaplic(?:io|o|ó|a)sa\b/gi, ' capricciosa ');
-      s = s.replace(/\bkaplicz?oza\b/gi,          ' capricciosa ');
-      s = s.replace(/\bcapriciosa\b/gi,           ' capricciosa ');
-      s = s.replace(/\bcapricc?io?sa\b/gi,        ' capricciosa ');
-      s = s.replace(/\bgoogle\b/gi,               ' kugel ');
-      s = s.replace(/\barial\b/gi,                ' ariel ');
-      return s.trim().replace(/\s{2,}/g,' ');
-    };
-
-    const ASR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    let rec = null, recognizing = false;
-
-    const setListening = (on)=>{
-      app.classList.toggle('listening', on);
-      dot.style.background = on ? '#21d4fd' : '#86e2ff';
-      transcript.classList.toggle('ghost', !on && !transcript.textContent.trim());
-    };
-
-    const startRec = ()=>{
-      if(!ASR){ transcript.textContent = 'Rozpoznawanie mowy wymaga Chrome/Edge.'; return; }
-      if(recognizing){ try{rec && rec.stop()}catch(_){} return; }
-
-      rec = new ASR();
-      rec.lang = 'pl-PL'; rec.interimResults = true; rec.continuous = false;
-
-      rec.onstart = ()=>{ recognizing=true; setListening(true); transcript.textContent='Słucham…'; transcript.classList.remove('ghost'); };
-      rec.onerror = (e)=>{ recognizing=false; setListening(false); transcript.textContent = 'Błąd rozpoznawania: '+(e.error||''); };
-      rec.onend = ()=>{ recognizing=false; setListening(false); if(!transcript.textContent.trim()) transcript.textContent='Powiedz, co chcesz zamówić…'; };
-
-      rec.onresult = (ev)=>{
-        let finalText = '', interim = '';
-        for(let i=ev.resultIndex; i<ev.results.length; i++){
-          const t = ev.results[i][0].transcript;
-          if(ev.results[i].isFinal) finalText += t; else interim += t;
-        }
-        const raw = (finalText || interim).trim();
-        const txt = normalizeASR(dedupeWords(raw));
-        transcript.textContent = txt || 'Słucham…';
-      };
-
-      try{ rec.start(); }catch(_){}
-    };
-
-    [logoBtn, micBtn].forEach(el=> el.addEventListener('click', startRec, {passive:true}));
-
-    const tiles = {
-      food: document.getElementById('tileFood'),
-      taxi: document.getElementById('tileTaxi'),
-      hotel: document.getElementById('tileHotel'),
-    };
-    const selectTile = (key)=>{
-      Object.values(tiles).forEach(t=>t.classList.remove('active'));
-      tiles[key].classList.add('active');
-    };
-    tiles.food.addEventListener('click', ()=>selectTile('food'));
-    tiles.taxi.addEventListener('click', ()=>selectTile('taxi'));
-    tiles.hotel.addEventListener('click',()=>selectTile('hotel'));
-
-    transcript.textContent='Powiedz, co chcesz zamówić…';
-    window.addEventListener('beforeunload', ()=>{ try{window.speechSynthesis.cancel()}catch(_){}});
-
-  })();
-  </script>
+  <!-- klient: nagrywanie + call do Whisper/GPT -->
+  <script src="freeflow-assistant.js" defer></script>
 </body>
 </html>
