--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <!-- >>> TU: poprawiona nazwa pliku SVG <<< -->
-        <img src="assets/Freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
+        <!-- ścieżka zgodna z Twoim repo: /logo/freeflow-core.svg -->
+        <img src="logo/freeflow-core.svg" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
@@ -102,7 +102,6 @@
     </nav>
   </div>
 
-  <!-- klient: nagrywanie + call do Whisper/GPT -->
   <script src="freeflow-assistant.js" defer></script>
 </body>
 </html>
