--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
         <!-- ścieżka zgodna z Twoim repo: /logo/freeflow-core.svg -->
-        <img src="logo/freeflow-core.svg" alt="FreeFlow" width="840" height="1080" />
+<img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
