--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
     .hidden{display:none !important}
     a,button{color:inherit}
+    /* notice */
+    .notice{
+      position: fixed; left:50%; translate:-50% 0;
+      bottom: calc(120px + env(safe-area-inset-bottom));
+      width: min(92vw, 740px);
+      border-radius: 18px; padding: 14px 16px;
+      background: var(--glass-bg); border: 1px solid var(--glass-brd);
+      backdrop-filter: blur(var(--glass-blur));
+      box-shadow: 0 12px 50px rgba(0,0,0,.35);
+      display: none;
+      color:#e9ecf6; font-weight:600;
+    }
+    .notice.show{ display:block }
   </style>
 </head>
 <body>
@@ -83,8 +96,7 @@
 
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <!-- ścieżka zgodna z Twoim repo: /logo/freeflow-core.svg -->
-<img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
+        <img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
@@ -93,6 +105,9 @@
         <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
         <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
       </div>
+
+      <!-- notice box -->
+      <div class="notice" id="notice" role="status" aria-live="polite"></div>
     </section>
 
     <nav class="dock" aria-label="Kategorie">
