--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>FreeFlow — zamów głosem</title>
   <meta name="color-scheme" content="dark light" />
+
+  <!-- KONFIG (czytane przez freeflow-assistant.js) -->
+  <meta name="gpt-proxy" content="/api/gpt">          <!-- jeśli masz endpoint z poprzedniej wiadomości -->
+  <meta name="asr-provider" content="browser">        <!-- 'browser' lub 'whisper' -->
+  <meta name="whisper-url" content="">                <!-- np. https://twoj-backend/api/whisper -->
+  <meta name="whisper-auth" content="">               <!-- np. Bearer XXX -->
+
   <style>
     :root{
       --glass-bg: rgba(20,20,22,.55);
@@ -40,42 +47,59 @@
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
     .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
       min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
+
     .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
-    .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
-      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
+    .logoWrap{
+      position:relative; width:min(82vw,420px);
+      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
+      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55));
+    }
     .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
-    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
+    .hit{
+      position:absolute; inset:0; border-radius:36px; background:transparent; border:0;
+      cursor:pointer; outline:none; -webkit-tap-highlight-color: transparent;
+    }
+    .hit:focus{outline:none}
     .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
-    @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
-    .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
+    @keyframes pulse{
+      0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)}
+      50%{    filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}
+    }
+
+    .asr{
+      margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px);
+      border-radius:20px; padding:18px 20px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
+      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)
+    }
     .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
     .text{flex:1; min-height:1.2em}
     .ghost{color:var(--muted)}
     .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
       background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
       display:grid; place-items:center; cursor:pointer}
+
     .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
     .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
+
+    /* lekki debug-toast (nie nachodzi na transkrypcję) */
+    .toast{
+      position: fixed; left:50%; translate:-50% 0;
+      bottom: calc(96px + env(safe-area-inset-bottom));
+      width:min(92vw,740px);
+      border-radius:16px; padding:12px 14px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd);
+      backdrop-filter: blur(var(--glass-blur));
+      box-shadow:0 12px 60px rgba(0,0,0,.35);
+      display:none; font-size:14px; color:#e9ecf6
+    }
+    .toast.show{display:block}
+
     .hidden{display:none !important}
     a,button{color:inherit}
-    /* notice */
-    .notice{
-      position: fixed; left:50%; translate:-50% 0;
-      bottom: calc(120px + env(safe-area-inset-bottom));
-      width: min(92vw, 740px);
-      border-radius: 18px; padding: 14px 16px;
-      background: var(--glass-bg); border: 1px solid var(--glass-brd);
-      backdrop-filter: blur(var(--glass-blur));
-      box-shadow: 0 12px 50px rgba(0,0,0,.35);
-      display: none;
-      color:#e9ecf6; font-weight:600;
-    }
-    .notice.show{ display:block }
   </style>
 </head>
 <body>
@@ -89,14 +113,15 @@
       <div class="actions">
         <div class="chip" aria-label="Menu" title="Menu">≡</div>
         <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">
-          🛒 <span class="cart-badge" id="cartCount">11</span>
+          🛒 <span class="cart-badge" id="cartCount">0</span>
         </div>
       </div>
     </header>
 
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
+        <!-- najpierw SVG, jeśli nie ma – w locie podmiana na PNG -->
+        <img id="ffLogo" src="assets/Freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
@@ -105,9 +130,6 @@
         <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
         <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
       </div>
-
-      <!-- notice box -->
-      <div class="notice" id="notice" role="status" aria-live="polite"></div>
     </section>
 
     <nav class="dock" aria-label="Kategorie">
@@ -115,8 +137,22 @@
       <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
       <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
     </nav>
+
+    <div class="toast" id="toast"></div>
   </div>
 
   <script src="freeflow-assistant.js" defer></script>
+  <script>
+    // fallback logotypu: jeśli SVG nie istnieje → PNG
+    (function(){
+      const img = document.getElementById('ffLogo');
+      img.addEventListener('error', ()=>{
+        if(!img.dataset.fallback){
+          img.dataset.fallback = '1';
+          img.src = 'assets/Freeflowlogo.png';
+        }
+      }, {once:true});
+    })();
+  </script>
 </body>
 </html>
